--- a/productos/cotillon-infantil.html
+++ b/productos/cotillon-infantil.html
@@ -108,6 +108,87 @@
         </ul>
 
     </nav>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/globos/6098194172263.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR104.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR106.jpg jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR107.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR110.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR111.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">bengala con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="/img/personajes/RR112.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">vela con brillo </h5>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
+
 
 
 
