--- a/productos/cotillon-infantil.html
+++ b/productos/cotillon-infantil.html
@@ -133,7 +133,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/personajes/RR106.jpg jpg" class="card-img-top" alt="...">
+                <img src="/img/personajes/RR106.jpg " class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">bengala con brillo </h5>
 
