--- a/nosotros.html
+++ b/nosotros.html
@@ -80,13 +80,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/img01.jpg" class="d-block w-60" alt="...">
+                    <img src="img/img01.jpg" class="d-block w-100 h-80" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/img02.jpg" class="d-block w-60" alt="...">
+                    <img src="img/img02.jpg" class="d-block w-100 h-80" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/img04.jpg" class="d-block w-60" alt="...">
+                    <img src="img/img04.jpg" class="d-block w-100 h-80" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
