--- a/mayorista.html
+++ b/mayorista.html
@@ -73,12 +73,12 @@
     </nav>
 
     <div class="superiorb">
-        para poder comprar por mayor debes crar un usuario. <br>Ademas recorda que la compra minima es a partir de los $150.000
+        para poder comprar por mayor debes crear un usuario. <br>Ademas recorda que la compra minima es a partir de los $150.000
 
 
     </div>
     <section class="bg-secondary">
-        <h2 class="text-center pt-2">Contacto</h2>
+        <h2 class="text-center pt-2">ingresar</h2>
         <div class="container-fluid py-4">
             <div class="row">
                 <article class="col-md-6">
