--- a/minorista.html
+++ b/minorista.html
@@ -72,14 +72,14 @@
 
     </nav>
     <div class="superiorb">
-        Para poder comprar por menor debes crar un usuario. <br>Ademas recorda que la compra minima es a partir de los $5.000
+        Para poder comprar por menor debes crear un usuario. <br>Ademas recorda que la compra minima es a partir de los $5.000
 
 
     </div>
     <section class="bg-secondary">
-        <h2 class="text-center pt-2">Contacto</h2>
+        <h2 class="text-center pt-2">ingresar</h2>
         <div class="container-fluid py-4">
-            < class="row">
+            <div class="row">
                 <article class="col-md-6">
                     <form class="mb-3">
                         <div class="mb-3">
