--- a/productos/15años.html
+++ b/productos/15años.html
@@ -108,7 +108,7 @@
         </ul>
 
     </nav>
-    <div class="card bg-dark text-white">
+    <div class="card bg-dark text-white w-80 ">
         <img src="../img/a7ed1390bc2e569c0575623d76c356a8.jpg" class="card-img " alt="...">
         <div class="card-img-overlay">
             <h5 class="card-title">15 años</h5>
