--- a/productos/fiestas.html
+++ b/productos/fiestas.html
@@ -108,6 +108,18 @@
         </ul>
 
     </nav>
+    <div class="card bg-dark text-white ">
+        <img src="../img/r10_2x_16_56302.jpg" class="card-img " alt="...">
+        <div class="card-img-overlay">
+            <h5 class="card-title">Fiestas</h5>
+            <p class="card-text">Mas de 20 años de experiencia realizando los mejores eventos y fiestas, brindamos un excelente catering y cotillon, para que un hermoso dia . </p>
+            <p class="card-text">shows-catering-cotillon-decoracion-animacion.</p>
+            <p class="card-text">consultanos ,nos adaptamos a tu necesidad!!!</p>
+
+
+        </div>
+    </div>
+
 
 
 
