--- a/productos/15años.html
+++ b/productos/15años.html
@@ -108,13 +108,14 @@
         </ul>
 
     </nav>
-    <div class="card bg-dark text-white w-80 ">
+    <div class="card bg-dark text-white ">
         <img src="../img/a7ed1390bc2e569c0575623d76c356a8.jpg" class="card-img " alt="...">
         <div class="card-img-overlay">
             <h5 class="card-title">15 años</h5>
-            <p class="card-text">mas de 20 años de experiencia realizando los mejores eventos de 15 años, brindamos un excelente catering y cotillon, para que pases un hermoso cumpleaños. </p>
+            <p class="card-text">Mas de 20 años de experiencia realizando los mejores eventos de 15 años, brindamos un excelente catering y cotillon, para que pases un hermoso cumpleaños. </p>
             <p class="card-text">shows-catering-cotillon-decoracion-animacion.</p>
-            <p class="card-text">nos adaptamos a tu necesidad!!!</p>
+            <p class="card-text">consultanos ,nos adaptamos a tu necesidad!!!</p>
+
 
         </div>
     </div>
