--- a/productos/casamientos.html
+++ b/productos/casamientos.html
@@ -108,6 +108,17 @@
         </ul>
 
     </nav>
+    <div class="card bg-dark text-white ">
+        <img src="../img/7_175365.jpg" class="card-img " alt="...">
+        <div class="card-img-overlay">
+            <h5 class="card-title">Casamientos</h5>
+            <p class="card-text">Mas de 20 años de experiencia realizando los mejores eventos de casamientos, brindamos un excelente catering y cotillon, para que una hermosa boda . </p>
+            <p class="card-text">shows-catering-cotillon-decoracion-animacion.</p>
+            <p class="card-text">consultanos ,nos adaptamos a tu necesidad!!!</p>
+
+
+        </div>
+    </div>
 
 
 
