--- a/productos/cotillon-infantil.html
+++ b/productos/cotillon-infantil.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -116,7 +116,7 @@
             <div class="card h-100">
                 <img src="/img/personajes/RR107.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">combo de pepa </h5>
 
                 </div>
 
@@ -126,7 +126,7 @@
             <div class="card h-100">
                 <img src="/img/personajes/RR110.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">combo de frozzen</h5>
 
                 </div>
 
@@ -136,7 +136,7 @@
             <div class="card h-100">
                 <img src="/img/personajes/RR111.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">combo de hombre araña</h5>
 
                 </div>
 
@@ -146,7 +146,7 @@
             <div class="card h-100">
                 <img src="/img/personajes/RR112.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">combo granja de zenon </h5>
 
                 </div>
 
