--- a/productos/descartables.html
+++ b/productos/descartables.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,7 +115,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/202090110120.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">vasos</h5>
 
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/202090110229.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">vasos</h5>
 
                 </div>
 
@@ -135,7 +135,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7798098705022.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title"> cucharas</h5>
 
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7798098705060.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">tenedores </h5>
 
                 </div>
 
@@ -155,7 +155,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7798342402851.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">vasos </h5>
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7798342402912.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">vasos </h5>
 
                 </div>
 
@@ -175,7 +175,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7798342403063.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos</h5>
 
                 </div>
 
@@ -185,7 +185,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7799051006392.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos </h5>
 
                 </div>
 
@@ -195,7 +195,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/7799051006408.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">platos</h5>
 
                 </div>
 
@@ -207,7 +207,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/LPL151.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos </h5>
 
                 </div>
 
@@ -217,7 +217,7 @@
             <div class="card h-100">
                 <img src="/img/descartables//LPL154.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos </h5>
 
                 </div>
 
@@ -227,7 +227,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/LPL155.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos </h5>
 
                 </div>
 
@@ -237,7 +237,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/LPL157.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos </h5>
 
                 </div>
 
@@ -247,7 +247,7 @@
             <div class="card h-100">
                 <img src="/img/descartables/LPL158.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">platos</h5>
 
                 </div>
 
