--- a/productos/reposteria.html
+++ b/productos/reposteria.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,7 +115,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798288880171.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">baño espejo </h5>
 
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798705129005.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">brownie </h5>
 
                 </div>
 
@@ -135,7 +135,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798705129098.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">cupkake </h5>
 
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798705129104.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">cupkake </h5>
 
                 </div>
 
@@ -155,7 +155,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798100464145.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">chocolate blanco </h5>
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798100464138.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">chocolate semiamargo </h5>
 
                 </div>
 
@@ -176,7 +176,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7798100464121.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">chocolate con leche </h5>
 
                 </div>
 
@@ -186,7 +186,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7795933203170.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">frutillas</h5>
 
                 </div>
 
@@ -196,7 +196,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7795933202067.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">pulpa de anana</h5>
 
                 </div>
 
@@ -206,7 +206,7 @@
             <div class="card h-100">
                 <img src="/img/reposteria/7795933000557.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">pulpa de frutilla</h5>
 
                 </div>
 
