--- a/productos/cotillon-carioca.html
+++ b/productos/cotillon-carioca.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,7 +115,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/RM1127.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">vinchas </h5>
 
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/JL442.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sombreros</h5>
 
                 </div>
 
@@ -135,7 +135,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/JL605.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sombreros</h5>
 
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/RM1255.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">anteojos</h5>
 
                 </div>
 
@@ -155,7 +155,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/2371876010607.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">gorros</h5>
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/CAK2251.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">antifaces</h5>
 
                 </div>
 
@@ -175,7 +175,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/CAK4062.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">antifaces</h5>
 
                 </div>
 
@@ -185,7 +185,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/CAK6052.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">antifaces</h5>
 
                 </div>
 
@@ -195,7 +195,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/GB102.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">cornetas</h5>
 
                 </div>
 
@@ -205,7 +205,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/ROT582.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cornetas</h5>
 
                 </div>
 
@@ -215,7 +215,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/AR065.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">maracas</h5>
 
                 </div>
 
@@ -225,7 +225,7 @@
             <div class="card h-100">
                 <img src="/img/carioca/2371876060022.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cornetas</h5>
 
                 </div>
 
