--- a/productos/decoracion.html
+++ b/productos/decoracion.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,7 +115,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006187.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin</h5>
 
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006279.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin </h5>
 
                 </div>
 
@@ -135,7 +135,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006361.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin</h5>
 
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006378.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin</h5>
 
                 </div>
 
@@ -155,7 +155,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006385.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin </h5>
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/7799051006514.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">banderin </h5>
 
                 </div>
 
@@ -175,7 +175,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060AZ.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cortinas </h5>
 
                 </div>
 
@@ -185,7 +185,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060FC.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cortinas </h5>
 
                 </div>
 
@@ -195,7 +195,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060OR.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">cortinas</h5>
 
                 </div>
 
@@ -205,7 +205,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060PL.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cortinas</h5>
 
                 </div>
 
@@ -215,7 +215,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060RJ.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cortinas </h5>
 
                 </div>
 
@@ -226,7 +226,7 @@
             <div class="card h-100">
                 <img src="/img/decoracion/JC060RS.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">cortinas</h5>
 
                 </div>
 
