--- a/productos/globos.html
+++ b/productos/globos.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img src="../img/84269764_112307247017245_3399982195543113728_n (2).jpg" alt=""></a>
-            <div class="icon-lang"></div>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,7 +115,7 @@
             <div class="card h-100">
                 <img src="/img/globos/6098194172263.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798194172195.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -135,7 +135,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798194172201.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319303603.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -155,7 +155,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319884277.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319884284.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -175,7 +175,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319884291.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">sets </h5>
 
                 </div>
 
@@ -185,7 +185,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319884307.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">sets </h5>
 
                 </div>
 
@@ -195,7 +195,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319984229.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo</h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
@@ -205,7 +205,7 @@
             <div class="card h-100">
                 <img src="/img/globos/7798319984243.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">vela con brillo </h5>
+                    <h5 class="card-title">sets</h5>
 
                 </div>
 
